--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,14 @@ p {
     margin-inline-end: 0px;
 }
 
+.navi, .article, .silde, .footer {
+    padding: 25px;
+}
+
 /* ヘッダー */
 .header {
     width: 100%;
     height: 50px;
-    padding: 0 24px;
     display: flex;
     align-items: center;
     position: fixed;
@@ -71,14 +74,17 @@ p {
 
 .header-navi {
     height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
     display: none;
+    margin-left: auto;
 }
 
 .header-navi > li{
-    margin: 1em;
+    height: 100%;
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 18px;
 }
 
 .menu-btn {
@@ -101,15 +107,16 @@ p {
 .navi {
     width: 100%;
     height: 100%;
-    padding: 24px;
     display: none;
     position: fixed;
     top: 50px;
     z-index: 1;
-    
+
+    background: #cccccc;
 }
 
 .navi > li {
+    border: 1px solid #ffffff;
     background: #cccccc;
 }
 
@@ -120,14 +127,15 @@ p {
 /* メイン */
 .main {
     width: 100%;
+    max-width: 860px;
     position: relative;
     top: 50px;
+    left: 0;
 }
 
 .article {
     width: 100%;
     height: auto;
-    padding: 24px;
     background: #ffffff;
 }
 
@@ -188,33 +196,29 @@ p {
 }
 
 /* サイドバー */
-.side-bar {
+.side {
     display: none;
 }
-
 
 /* フッター */
 .footer {
     width: 100%;
     position: relative;
     bottom: -50px; /* ヘッダー分マイナス */
-    padding: 24px;
 
     color: #ffffff;
     background: #3E3E3E;
 }
 
-
-
 /* 480pxから */
 @media (min-width: 480px) {
     .navi {
-        width: 30%;
+        width: 50%;
         height: 100%;
         display: none;
         position: fixed;
         top: 50px;
-        right: -30%;
+        right: -50%;
     }
     
     #drawer-checkbox:checked ~ .navi {
@@ -225,8 +229,13 @@ p {
 
 /* 770pxから */
 @media (min-width: 770px) {
+    .navi, .main, .article, .silde, .footer {
+        padding: 16px;
+    }
+    
     .header {
         position: absolute;
+        padding: 0 16px;
     }
 
     .header-title {
@@ -236,47 +245,55 @@ p {
     .header-navi {
         display: flex;
         align-items: center;
-        margin-left: auto;
     }
 
     .menu-btn {
         display: none;
     }
+    
+    .navi {
+        display: none;
+    }
+
+    #drawer-checkbox:checked ~ .navi {
+        display: none;
+    }
 
     .main {
         width: 70%;
-        position: relative;
-        top: 50px;
-        left: 0;
-        padding: 24px;
     }
 
-    .article {
-        padding: 16px;
-    }
-
-
-    .side-bar {
-        width: 30%;
-        position: absolute;
-        top: 50px;
-        left: 70%;
+    .side {
+        width: calc(30% - 16px);
         display: block;
-        background: #F6F6F4;
-        padding: 24px;
+        background: #ffffff;
+        position: absolute;
+        top: 66px;
+        left: 70%;
     }
-
+    
     .footer {
         width: 100%;
-        position: relative;
-        bottom: -50px; /* ヘッダー分マイナス */
         z-index: 1;
     }
 }
 
-@media (max-width: 991px) {
-}
+/* 1025pxまで */
+@media (min-width: 1025px) {
+    .header{
+        padding: 0 50px;
+    }
 
-/* 1200pxまで */
-@media (max-width: 1200px) {
+    .navi, .main, .article, .silde, .footer {
+        padding: 50px;
+    }
+
+    .side {
+        width: calc(30% - 50px);
+        display: block;
+        background: #ffffff;
+        position: absolute;
+        top: calc(50px + 50px);
+        left: 70%;
+    }
 }
