--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -50,7 +50,6 @@
     left: 0;
     bottom: 100%;
     transition: all .3s ease;
-    color: #ffffff;
     background: #1a1b0e;
  
     &__list {
@@ -62,7 +61,12 @@
             margin: 0 auto;
             font-size: 1.8rem;
             align-items: center;
-            cursor: pointer
+            cursor: pointer;
+
+            a{
+                color: #ffffff;
+
+            }
         }
     }
 }
