--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,11 @@
-
-
+.index-main {
+    width: 100%;
+    height: 500px;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    background-color: #cccccc;
+}
 
 /* 480pxから */
 @media (min-width: 480px) {
