--- a/pub/css/blog.css
+++ b/pub/css/blog.css
@@ -1,4 +1,49 @@
 @charset "UTF-8";
+.blog-main {
+  width: 100%;
+  padding: 24px 12px;
+  background-color: #F9FBFD;
+  position: relative;
+  top: 50px;
+  left: 0;
+}
+
+.article {
+  width: 100%;
+  max-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.5rem;
+  padding: 24px;
+  background-color: #ffffff;
+  border: 1px solid #edf2f9;
+  border-radius: .5rem;
+  -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
+  box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
+  word-wrap: break-word;
+}
+
+.article__title {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #12263f;
+  margin-bottom: .5rem;
+}
+
+.global-footer {
+  width: 100%;
+  height: 10px;
+  background-color: #F9FBFD;
+  position: relative;
+  top: 50px;
+}
+
+.global-footer__container {
+  width: 100%;
+  height: 100%;
+  padding: 12px;
+}
+
 /* 480pxから */
 /* 770pxから */
 /* 1025pxから */
