--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,7 @@
 .global-header {
     width: 100%;
     height: 50px;
-    padding: 0 25px;
+    padding: 0 12px;
     position: fixed;
     top: 0;
     left: 0;
@@ -20,6 +20,9 @@
 
     &__title {
         display: inline-block;
+        a {
+            color: #ffffff;
+        }
     }
 
     &__label {
