--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -25,19 +25,28 @@
 }
 
 .global-navi {
+    width: 50px;
+    height: 50px;
     margin-left: auto;
- 
-    &__label {
+
+    &__label, &__label--close  {
         width: 50px;
         height: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
-        z-index: 3;
         cursor: pointer;
+        position: absolute;
+        top: 0;
     }
 
-    &__icon, &__icon:before, &__icon:after {
+    &__label--close {
+        opacity: 0;
+    }
+    
+    &__icon,
+    &__icon:before,
+    &__icon:after {
         width: 25px;
         height: 3px;
         border-radius: 3px;
@@ -47,13 +56,33 @@
         content: '';
         cursor: pointer;
     }
-    
+
     &__icon::before {
         top: -8px;
     }
     
     &__icon::after {
         top: 8px;
+    }
+
+    &__icon--close,
+    &__icon--close:before {
+        width: 25px;
+        height: 3px;
+        border-radius: 3px;
+        background: #ffffff;
+        display: block;
+        position: absolute;
+        content: '';
+        cursor: pointer;
+    }
+
+    &__icon--close {
+        transform: rotate(45deg);
+    }
+
+    &__icon--close::before {
+        transform: rotate(-90deg);
     }
     
     &__checkbox {
@@ -63,7 +92,15 @@
     &__checkbox:checked ~ &__list {
         right: 0;
     }
+    
+    &__checkbox:checked ~ &__label {
+        opacity: 0;
+    }
 
+    &__checkbox:checked ~ &__label--close {
+        opacity: 1;
+    }
+    
     &__list {
         width: 100%;
         height: 100%;
