--- a/pub/css/blog.css
+++ b/pub/css/blog.css
@@ -30,6 +30,19 @@
   margin-bottom: .5rem;
 }
 
+.article__cotent {
+  width: 100%;
+}
+
+.article__image {
+  width: 100%;
+  margin-bottom: .5rem;
+}
+
+.article__image img {
+  width: 100%;
+}
+
 .global-footer {
   width: 100%;
   height: 10px;
