--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -27,7 +27,22 @@
         color: #12263f;
         margin-bottom: .5rem;
     }
+    
+    &__cotent {
+        width: 100%;
+    }
+
+    &__image {
+        width: 100%;
+        margin-bottom: .5rem;
+    }
+    
+    &__image img {
+        width: 100%;
+    }
+    
 }
+
 
 .global-footer {
     width: 100%;
