--- a/pub/css/header.css
+++ b/pub/css/header.css
@@ -130,6 +130,9 @@
   .global-header {
     position: absolute;
   }
+  .global-header__container {
+    max-width: 720px;
+  }
   .global-navi {
     width: auto;
     margin-left: auto;
@@ -154,8 +157,8 @@
 }
 
 /* 1025pxから */
-@media (min-width: 1025px) {
-  .header {
-    padding: 0 50px;
+@media (min-width: 1000px) {
+  .global-header__container {
+    max-width: 960px;
   }
 }
