--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -6,8 +6,10 @@ html {
 
 body {
     width: 100%;
+    color: #12263f;
     font-size: 1.4rem;
     font-family: '游ゴシック体', 'Yu Gothic', YuGothic, sans-serif;
+    font-weight: 500;
 }
 
 h1 {
@@ -21,4 +23,12 @@ h2 {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
