--- a/pub/css/footer.css
+++ b/pub/css/footer.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 .global-footer {
   width: 100%;
-  padding: 12px;
   color: #95aac9;
   background-color: #F9FBFD;
   position: relative;
@@ -10,8 +9,8 @@
 
 .footer-container {
   width: 100%;
-  height: 100%;
   max-width: 540px;
+  padding: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,4 +23,15 @@
 
 /* 480pxから */
 /* 768pxから */
+@media (min-width: 768px) {
+  .footer-container {
+    max-width: 720px;
+  }
+}
+
 /* 1025pxから */
+@media (min-width: 1000px) {
+  .footer-container {
+    max-width: 960px;
+  }
+}
