--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -104,7 +104,6 @@
     &__list {
         width: 100%;
         height: 100%;
-        padding: 12px;
         position: fixed;
         top: 50px;
         right: -100%;
@@ -117,7 +116,10 @@
             width: 100%;
             height: 50px;
             max-width: 540px;
+            display: flex;
+            align-items: center;
             margin: 0 auto;
+            padding: 0 12px;
             font-size: 1.8rem;
             align-items: center;
             cursor: pointer;
