スタイル調整

--- a/pub/css/blog.css
+++ b/pub/css/blog.css
@@ -28,7 +28,7 @@
 
 .card {
   width: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 24px;
   padding: 24px;
   background-color: #ffffff;
   border: 1px solid #edf2f9;
@@ -51,7 +51,6 @@
 
 .card-content {
   width: 100%;
-  margin-bottom: 2rem;
 }
 
 .card-content__image {
@@ -60,17 +59,9 @@
   border-radius: .5rem;
 }
 
-.card-content__image:last-child {
-  margin-bottom: 2rem;
-}
-
 .card-content__text {
   margin-top: 0;
   margin-bottom: 1rem;
-}
-
-.card-content__text:last-child {
-  margin-bottom: 0;
 }
 
 .card-content__tag {
@@ -87,6 +78,7 @@
 
 .card-fotter {
   width: 100%;
+  margin-top: 2rem;
   color: #95aac9;
   display: flex;
   justify-content: space-between;
