--- a/pub/css/common.css
+++ b/pub/css/common.css
@@ -34,6 +34,15 @@ p {
   margin-inline-end: 0px;
 }
 
-img {
+input, button, textarea {
+  font-size: 100%;
   margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
