--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,39 +1,42 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background-color: #F6F6F4;
+}
+
 .login-form {
     width: 300px;
     height: 250px;
+    padding: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 50px;
-    border-radius: 5px;
-    border: 1px solid #cccccc;
+    border-radius: .5rem;
+    border: 1px solid #E1E4E8;
+    background-color: #ffffff;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
+    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
     
-    &__id, &__pass {
+    &__id, &__pass, &__btn {
         width: 100%;
         height: 30px;
-        border-radius: 5px;
-        border: 1px solid #cccccc;
+        border-radius: 4px;
+        border: 1px solid #E1E4E8;
     }
-}
-
-.btn-area {
-    width: 100%;
-    height: 30px;
-    display: flex;
-    justify-content: space-between;
-
-    &__btn, &__btn--cancel{
-        width: 45%;
-        height: 30px;
-        display: block;
-        border-radius: 5px;
-        border: 1px solid #cccccc;
-        outline: none;
-
+    
+    &__id, &__pass {
+        padding: 0 .5em;
     }
 
+    &__btn {
+        // TODO: 統一する
+        color: rgb(182, 182, 182);
+    }
 }
