--- a/src/scss/regester.scss
+++ b/src/scss/regester.scss
@@ -3,29 +3,6 @@ html, body {
     height: 100%;
 }
 
-p {
-    width: 100%;
-    height: 30px;
-    font-size: 1.4rem;
-    font-weight: 900;
-    display: flex;
-    align-items: center;
-    margin: 0;
-}
-
-input, button, textarea {
-    font-size: 100%;
-    margin: 0;
-    padding: 0;
-    background: none;
-    border: none;
-    border-radius: 0;
-    outline: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-
 .regester-wrapper {
     width: 100%;
     height: 100%;
@@ -54,10 +31,18 @@ input, button, textarea {
 
 .regester-image {
     margin-bottom: 10px;
-    &__input {
+    &__label {
         width: 100%;
         height: 30px;
-        background-color: #ffffff;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #cccccc;
+        cursor: pointer;
+    }
+    &__input {
+        display: none;
     }
 }
 
@@ -101,8 +86,8 @@ input, button, textarea {
     display: flex;
     justify-content: space-between;
     
-    &__submit, &__cancel {
-        width: 8em;
+    &__submit {
+        width: 100%;
         height: 30px;
         font-size: 100%;
         border-radius: 5px;
