--- a/pub/css/about.css
+++ b/pub/css/about.css
@@ -1,4 +1,15 @@
 @charset "UTF-8";
+html, body {
+  height: 100%;
+}
+
+.about-main {
+  width: 100%;
+  height: calc(100% - 95px);
+  position: relative;
+  top: 50px;
+}
+
 /* 480pxから */
 /* 770pxから */
 /* 1025pxから */
