--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -3,7 +3,7 @@ html, body {
     height: 100%;
 }
 
-.regester-wrapper {
+.register-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
@@ -11,13 +11,13 @@ html, body {
     align-items: center;
 }
 
-.regester-form {
+.register-form {
     width: 400px;
     padding: 50px;
     border: 1px solid #cccccc;
 }
 
-.regester-title {
+.register-title {
     margin-bottom: 10px;
 
     &__input {
@@ -29,7 +29,7 @@ html, body {
     }
 }
 
-.regester-image {
+.register-image {
     margin-bottom: 10px;
 
     &__input {
@@ -40,7 +40,7 @@ html, body {
     }
 }
 
-.regester-text {
+.register-text {
     margin-bottom: 10px;
 
     &__input {
@@ -54,7 +54,7 @@ html, body {
     }
 }
 
-.regester-tag {
+.register-tag {
     margin-bottom: 60px;
 
     &__input {
@@ -74,7 +74,7 @@ html, body {
     }
 }
 
-.regester-btn {
+.register-btn {
     width: 100%;
     height: 30px;
     display: flex;
