管理画面スタイル調整

--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -3,6 +3,11 @@ html, body {
     height: 100%;
 }
 
+body {
+    color: #212121;
+    background-color: #F5F5F5;
+}
+
 .register-wrapper {
     width: 100%;
     height: 100%;
@@ -12,25 +17,39 @@ html, body {
 }
 
 .register-form {
-    width: 400px;
+    width: 440px;
     padding: 50px;
-    border: 1px solid #cccccc;
+    background-color: #FFFFFF;
+    border: 1px solid #E0E0E0;
+    -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
+    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
 }
 
 .register-title {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    
+    &__name {
+        margin-top: 0;
+        margin-bottom: .2em;
+    }
 
     &__input {
         width: 100%;
         height: 30px;
         padding: 0 .5em;
         border-radius: 5px;
-        border: 1px solid #cccccc;
+        border: 1px solid #E0E0E0;
     }
 }
 
 .register-image {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+
+    &__name {
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-bottom: .2em;
+    }
 
     &__input {
         width: 100%;
@@ -41,7 +60,13 @@ html, body {
 }
 
 .register-text {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+
+    &__name {
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-bottom: .2em;
+    }
 
     &__input {
         width: 100%;
@@ -49,13 +74,19 @@ html, body {
         padding: .5em;
         font-size: 100%;
         border-radius: 5px;
-        border: 1px solid #cccccc;
+        border: 1px solid #E0E0E0;
         appearance: none;
     }
 }
 
 .register-tag {
     margin-bottom: 60px;
+    
+    &__name {
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-bottom: .2em;
+    }
 
     &__input {
         width: 150px;
@@ -63,14 +94,14 @@ html, body {
         padding: 0 .5em;
         margin-right: .5em;;
         border-radius: 5px;
-        border: 1px solid #cccccc;
+        border: 1px solid #E0E0E0;
     }
 
     &__button {
         height: 30px;
         padding: 0 .8em;
         border-radius: 5px;
-        border: 1px solid #cccccc;
+        border: 1px solid #E0E0E0;
     }
 }
 
@@ -85,7 +116,7 @@ html, body {
         height: 30px;
         font-size: 100%;
         border-radius: 5px;
-        border: 1px solid #cccccc;
+        border: 1px solid #E0E0E0;
     }
 }
 
