--- a/pub/css/login.css
+++ b/pub/css/login.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-  background-color: #F6F6F4;
+  background-color: #F5F5F5;
 }
 
 .login-form {
@@ -15,8 +15,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   border-radius: .5rem;
-  border: 1px solid #E1E4E8;
-  background-color: #ffffff;
+  border: 1px solid #E0E0E0;
+  background-color: #FFFFFF;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -29,7 +29,7 @@ body {
   width: 100%;
   height: 30px;
   border-radius: 4px;
-  border: 1px solid #E1E4E8;
+  border: 1px solid #E0E0E0;
 }
 
 .login-form__id, .login-form__pass {
@@ -37,5 +37,5 @@ body {
 }
 
 .login-form__btn {
-  color: #b6b6b6;
+  color: #9E9E9E;
 }
