--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-    background-color: #F6F6F4;
+    background-color: #F5F5F5;
 }
 
 .login-form {
@@ -15,8 +15,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     border-radius: .5rem;
-    border: 1px solid #E1E4E8;
-    background-color: #ffffff;
+    border: 1px solid #E0E0E0;
+    background-color: #FFFFFF;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -28,7 +28,7 @@ body {
         width: 100%;
         height: 30px;
         border-radius: 4px;
-        border: 1px solid #E1E4E8;
+        border: 1px solid #E0E0E0;
     }
     
     &__id, &__pass {
@@ -37,6 +37,6 @@ body {
 
     &__btn {
         // TODO: 統一する
-        color: rgb(182, 182, 182);
+        color: #9E9E9E;
     }
 }
