--- a/pub/css/footer.css
+++ b/pub/css/footer.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 .global-footer {
   width: 100%;
-  color: #95aac9;
-  background-color: #F9FBFD;
+  color: #BDBDBD;
+  background-color: #FAFAFA;
   position: relative;
   top: 50px;
 }
