--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,7 +1,7 @@
 .global-footer {
     width: 100%;    
-    color: #95aac9;
-    background-color: #F9FBFD;
+    color: #BDBDBD;
+    background-color: #FAFAFA;
     position: relative;
     top: 50px;    
 }
