--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -4,8 +4,7 @@ html, body {
 }
 
 body {
-    color: #212121;
-    background-color: #F5F5F5;
+    background-color: #FAFAFA;
 }
 
 .register-wrapper {
@@ -20,7 +19,7 @@ body {
     width: 440px;
     padding: 50px;
     background-color: #FFFFFF;
-    border: 1px solid #E0E0E0;
+    border: 1px solid #EEEEEE;
     -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
     box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
 }
@@ -55,7 +54,6 @@ body {
         width: 100%;
         height: 30px;
         border-radius: 5px;
-
     }
 }
 
