--- a/pub/css/header.css
+++ b/pub/css/header.css
@@ -2,11 +2,11 @@
 .global-header {
   width: 100%;
   height: 50px;
+  background-color: #FFFFFF;
+  border-bottom: 2px solid #EEEEEE;
   position: fixed;
   top: 0;
   left: 0;
-  color: #ffffff;
-  background-color: #212121;
   z-index: 2;
 }
 
@@ -22,17 +22,17 @@
 
 .global-header__title {
   display: inline-block;
-  color: #ffffff;
 }
 
 .global-navi {
-  width: 50px;
+  width: 25px;
   height: 50px;
+  border-bottom: 1px solid #EEEEEE;
   margin-left: auto;
 }
 
 .global-navi__label, .global-navi__label--close {
-  width: 50px;
+  width: 25px;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -50,7 +50,7 @@
   width: 25px;
   height: 3px;
   border-radius: 3px;
-  background: #ffffff;
+  background: #424242;
   display: block;
   position: absolute;
   content: '';
@@ -69,7 +69,7 @@
   width: 25px;
   height: 3px;
   border-radius: 3px;
-  background: #ffffff;
+  background: #424242;
   display: block;
   position: absolute;
   content: '';
@@ -103,11 +103,12 @@
 .global-navi__list {
   width: 100%;
   height: 100%;
+  font-weight: 600;
+  background-color: #FFFFFF;
   position: fixed;
   top: 50px;
   right: -100%;
   transition: right .1s ease;
-  background-color: #212121;
   z-index: 1;
 }
 
@@ -123,10 +124,8 @@
   font-size: 1.8rem;
   align-items: center;
   cursor: pointer;
-  color: #ffffff;
 }
 
-/* 480pxから */
 /* 770pxから */
 @media (min-width: 768px) {
   .global-header {
@@ -155,6 +154,7 @@
     display: flex;
     align-items: center;
     margin-left: 1.5em;
+    padding: 0;
   }
 }
 
