--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,11 @@
 .global-header {
     width: 100%;
     height: 50px;
+    background-color: #FFFFFF;
+    border-bottom: 2px solid #EEEEEE;
     position: fixed;
     top: 0;
     left: 0;
-    color: #ffffff;
-    background-color: #212121;
     z-index: 2;
 
     &__container{
@@ -20,17 +20,17 @@
 
     &__title {
         display: inline-block;
-        color: #ffffff;
     }
 }
 
 .global-navi {
-    width: 50px;
+    width: 25px;
     height: 50px;
+    border-bottom: 1px solid #EEEEEE;
     margin-left: auto;
 
     &__label, &__label--close  {
-        width: 50px;
+        width: 25px;
         height: 50px;
         display: flex;
         justify-content: center;
@@ -50,7 +50,7 @@
         width: 25px;
         height: 3px;
         border-radius: 3px;
-        background: #ffffff;
+        background: #424242;
         display: block;
         position: absolute;
         content: '';
@@ -70,7 +70,7 @@
         width: 25px;
         height: 3px;
         border-radius: 3px;
-        background: #ffffff;
+        background: #424242;
         display: block;
         position: absolute;
         content: '';
@@ -104,11 +104,12 @@
     &__list {
         width: 100%;
         height: 100%;
+        font-weight: 600;
+        background-color: #FFFFFF;
         position: fixed;
         top: 50px;
         right: -100%;
         transition: right .1s ease;
-        background-color: #212121;
         z-index: 1;
         
         li {
@@ -123,13 +124,8 @@
             font-size: 1.8rem;
             align-items: center;
             cursor: pointer;
-            color: #ffffff;
         }
     }
-}
-
-/* 480pxから */
-@media (min-width: 480px) {
 }
 
 /* 770pxから */
@@ -162,6 +158,7 @@
                 display: flex;
                 align-items: center;
                 margin-left: 1.5em;
+                padding: 0;
             }
         }
 
