--- a/pub/css/register.css
+++ b/pub/css/register.css
@@ -18,8 +18,9 @@ body {
 .register-form {
   width: 440px;
   padding: 50px;
-  background-color: #FFFFFF;
+  border-radius: .5rem;
   border: 1px solid #EEEEEE;
+  background-color: #FFFFFF;
   -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
   box-shadow: 0 0.75rem 1.5rem rgba(18, 38, 63, 0.03);
 }
@@ -38,7 +39,7 @@ body {
   height: 30px;
   padding: 0 .5em;
   border-radius: 5px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #9E9E9E;
 }
 
 .register-image {
@@ -71,9 +72,8 @@ body {
   width: 100%;
   height: 150px;
   padding: .5em;
-  font-size: 100%;
   border-radius: 5px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #9E9E9E;
   appearance: none;
 }
 
@@ -91,16 +91,33 @@ body {
   width: 150px;
   height: 30px;
   padding: 0 .5em;
-  margin-right: .5em;
   border-radius: 5px;
-  border: 1px solid #E0E0E0;
+  margin-right: .5em;
+  margin-bottom: .5em;
+  border: 1px solid #9E9E9E;
 }
 
 .register-tag__button {
   height: 30px;
   padding: 0 .8em;
   border-radius: 5px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #9E9E9E;
+}
+
+.register-tag .register-tag {
+  display: inline-block;
+  font-size: 1.2rem;
+  color: #BDBDBD;
+  background-color: #EEEEEE;
+  border-radius: .3rem;
+  padding: .2em .5em;
+  margin-right: .5em;
+  margin-bottom: .5em;
+}
+
+.register-tag .register-tag__delete {
+  margin-left: .5em;
+  cursor: pointer;
 }
 
 .register-btn {
@@ -113,7 +130,6 @@ body {
 .register-btn__submit {
   width: 100%;
   height: 30px;
-  font-size: 100%;
   border-radius: 5px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #9E9E9E;
 }
