--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -18,8 +18,9 @@ body {
 .register-form {
     width: 440px;
     padding: 50px;
-    background-color: #FFFFFF;
+    border-radius: .5rem;
     border: 1px solid #EEEEEE;
+    background-color: #FFFFFF;
     -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
     box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
 }
@@ -37,7 +38,7 @@ body {
         height: 30px;
         padding: 0 .5em;
         border-radius: 5px;
-        border: 1px solid #E0E0E0;
+        border: 1px solid #9E9E9E;
     }
 }
 
@@ -70,9 +71,8 @@ body {
         width: 100%;
         height: 150px;
         padding: .5em;
-        font-size: 100%;
         border-radius: 5px;
-        border: 1px solid #E0E0E0;
+        border: 1px solid #9E9E9E;
         appearance: none;
     }
 }
@@ -90,16 +90,34 @@ body {
         width: 150px;
         height: 30px;
         padding: 0 .5em;
-        margin-right: .5em;;
         border-radius: 5px;
-        border: 1px solid #E0E0E0;
+        margin-right: .5em;
+        margin-bottom: .5em;
+        border: 1px solid #9E9E9E;
     }
 
     &__button {
         height: 30px;
         padding: 0 .8em;
         border-radius: 5px;
-        border: 1px solid #E0E0E0;
+        border: 1px solid #9E9E9E;
+    }
+
+    .register-tag {
+        display: inline-block;
+        font-size: 1.2rem;
+        color: #BDBDBD;
+        background-color: #EEEEEE;
+        border-radius: .3rem;
+        padding: .2em .5em;
+        margin-right: .5em;
+        margin-bottom: .5em;
+        
+        &__delete {
+            margin-left: .5em;
+            cursor: pointer;
+        }
+
     }
 }
 
@@ -112,9 +130,8 @@ body {
     &__submit {
         width: 100%;
         height: 30px;
-        font-size: 100%;
         border-radius: 5px;
-        border: 1px solid #E0E0E0;
+        border: 1px solid #9E9E9E;
     }
 }
 
