--- a/pub/css/login.css
+++ b/pub/css/login.css
@@ -29,11 +29,15 @@ body {
   width: 100%;
   height: 30px;
   border-radius: 4px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #9E9E9E;
 }
 
 .login-form__id, .login-form__pass {
   padding: 0 .5em;
+}
+
+.login-form__id::placeholder, .login-form__pass::placeholder {
+  color: #E0E0E0;
 }
 
 .login-form__btn {
