--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -28,11 +28,15 @@ body {
         width: 100%;
         height: 30px;
         border-radius: 4px;
-        border: 1px solid #E0E0E0;
+        border: 1px solid #9E9E9E;
     }
     
     &__id, &__pass {
         padding: 0 .5em;
+    }
+
+    &__id::placeholder, &__pass::placeholder {
+        color: #E0E0E0;
     }
 
     &__btn {
