--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -52,9 +52,35 @@ body {
     }
 
     &__input {
+        display: none;
+    }
+
+    &__label {
         width: 100%;
         height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border-radius: 5px;
+        border: 1px solid #9E9E9E;
+        cursor: pointer;
+        margin-bottom: .5em;
+    }
+
+    .register-img {
+        display: inline-block;
+        font-size: 1.2rem;
+        color: #BDBDBD;
+        background-color: #EEEEEE;
+        border-radius: .3rem;
+        padding: .2em .5em;
+        margin-right: .5em;
+        margin-bottom: .5em;
+        
+        &__delete {
+            margin-left: .5em;
+            cursor: pointer;
+        }
     }
 }
 
@@ -78,29 +104,34 @@ body {
 }
 
 .register-tag {
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 60px;
     
     &__name {
+        width: 100%;
         margin-top: 0;
-        margin-bottom: 0;
         margin-bottom: .2em;
     }
 
     &__input {
-        width: 150px;
+        width: 70%;
         height: 30px;
         padding: 0 .5em;
         border-radius: 5px;
-        margin-right: .5em;
         margin-bottom: .5em;
         border: 1px solid #9E9E9E;
     }
 
     &__button {
+        width: 25%;
         height: 30px;
-        padding: 0 .8em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border-radius: 5px;
         border: 1px solid #9E9E9E;
+        margin-left: auto;
     }
 
     .register-tag {
