--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -1,73 +1,68 @@
 html, body {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
     background-color: #FAFAFA;
 }
 
-.register-wrapper {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .register-form {
-    width: 440px;
-    padding: 50px;
-    border-radius: .5rem;
-    border: 1px solid #EEEEEE;
+    width: 100%;
+    max-width: 450px;
+    padding: 48px;
+    margin: 0 auto;
     background-color: #FFFFFF;
-    -webkit-box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
-    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
 }
 
 .register-title {
     margin-bottom: 30px;
     
-    &__name {
-        margin-top: 0;
-        margin-bottom: .2em;
-    }
-
     &__input {
         width: 100%;
         height: 30px;
         padding: 0 .5em;
-        border-radius: 5px;
+        border: 1px solid #9E9E9E;
+    }
+}
+
+
+
+.register-text {
+    margin-bottom: 30px;
+
+    &__input {
+        width: 100%;
+        height: 150px;
+        padding: .5em;
         border: 1px solid #9E9E9E;
     }
 }
 
 .register-image {
-    margin-bottom: 30px;
-
-    &__name {
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-bottom: .2em;
-    }
-
+    width: 100%;
+    height: 30px;
+    margin-bottom: .5em;
+    border: 1px solid #9E9E9E;
+ 
     &__input {
         display: none;
     }
 
     &__label {
         width: 100%;
-        height: 30px;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 5px;
-        border: 1px solid #9E9E9E;
         cursor: pointer;
-        margin-bottom: .5em;
     }
+}
 
-    .register-img {
+.img-display-area {
+    margin-bottom: 30px;
+
+    .regi-multi-img {
         display: inline-block;
         font-size: 1.2rem;
         color: #BDBDBD;
@@ -77,64 +72,42 @@ body {
         margin-right: .5em;
         margin-bottom: .5em;
         
-        &__delete {
+        &__btn {
             margin-left: .5em;
             cursor: pointer;
         }
-    }
-}
-
-.register-text {
-    margin-bottom: 30px;
-
-    &__name {
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-bottom: .2em;
-    }
-
-    &__input {
-        width: 100%;
-        height: 150px;
-        padding: .5em;
-        border-radius: 5px;
-        border: 1px solid #9E9E9E;
-        appearance: none;
     }
 }
 
 .register-tag {
+    width: 100%;
+    height: 30px;
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 60px;
+    border: 1px solid #9E9E9E;
+    margin-bottom: .5em;
+    overflow: hidden;
     
-    &__name {
-        width: 100%;
-        margin-top: 0;
-        margin-bottom: .2em;
-    }
-
     &__input {
         width: 70%;
-        height: 30px;
+        height: 100%;
         padding: 0 .5em;
-        border-radius: 5px;
-        margin-bottom: .5em;
-        border: 1px solid #9E9E9E;
     }
 
     &__button {
-        width: 25%;
+        width: 30%;
         height: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 5px;
-        border: 1px solid #9E9E9E;
-        margin-left: auto;
+        border-left: 1px solid #9E9E9E;
     }
+}
 
-    .register-tag {
+.tag-display-area {
+    margin-bottom: 60px;
+
+    .regi-multi-tag {
         display: inline-block;
         font-size: 1.2rem;
         color: #BDBDBD;
@@ -144,25 +117,33 @@ body {
         margin-right: .5em;
         margin-bottom: .5em;
         
-        &__delete {
+        &__btn {
             margin-left: .5em;
             cursor: pointer;
         }
-
     }
 }
 
 .register-btn {
     width: 100%;
     height: 30px;
-    display: flex;
-    justify-content: space-between;
     
     &__submit {
         width: 100%;
         height: 30px;
-        border-radius: 5px;
         border: 1px solid #9E9E9E;
     }
 }
 
+// @media (min-width: 768px) {
+//     .register-form {
+//         max-width: 720px;
+//     }
+// }
+
+// /* 1025pxから */
+// @media (min-width: 1000px) {
+//     .register-form {
+//         max-width: 960px;
+//     }
+// }
