スタイル調整

--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -41,5 +41,10 @@ body {
 
     &__btn {
         color: #9E9E9E;
+
+        &:active {
+            background-color: #FAFAFA;
+        }
     }
+
 }
