--- a/pub/css/register.css
+++ b/pub/css/register.css
@@ -1,6 +1,6 @@
 html, body {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
@@ -9,6 +9,7 @@ body {
 
 .register-form {
   width: 100%;
+  height: 100%;
   max-width: 450px;
   padding: 48px;
   margin: 0 auto;
@@ -32,7 +33,7 @@ body {
 
 .register-text__input {
   width: 100%;
-  height: 150px;
+  height: 90px;
   padding: .5em;
   border: 1px solid #9E9E9E;
 }
@@ -93,13 +94,17 @@ body {
   padding: 0 .5em;
 }
 
-.register-tag__button {
+.register-tag__btn {
   width: 30%;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-left: 1px solid #9E9E9E;
+}
+
+.register-tag__btn:active {
+  background-color: #FAFAFA;
 }
 
 .tag-display-area {
@@ -122,6 +127,10 @@ body {
   cursor: pointer;
 }
 
+.tag-display-area .regi-multi-tag__btn:active {
+  background-color: #FAFAFA;
+}
+
 .register-btn {
   width: 100%;
   height: 30px;
@@ -131,4 +140,8 @@ body {
   width: 100%;
   height: 30px;
   border: 1px solid #9E9E9E;
+}
+
+.register-btn__submit:active {
+  background-color: #FAFAFA;
 }
