--- a/src/scss/register.scss
+++ b/src/scss/register.scss
@@ -1,6 +1,6 @@
 html, body {
     width: 100%;
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
@@ -9,6 +9,7 @@ body {
 
 .register-form {
     width: 100%;
+    height: 100%;
     max-width: 450px;
     padding: 48px;
     margin: 0 auto;
@@ -26,14 +27,12 @@ body {
     }
 }
 
-
-
 .register-text {
     margin-bottom: 30px;
 
     &__input {
         width: 100%;
-        height: 150px;
+        height: 90px;
         padding: .5em;
         border: 1px solid #9E9E9E;
     }
@@ -94,13 +93,16 @@ body {
         padding: 0 .5em;
     }
 
-    &__button {
+    &__btn {
         width: 30%;
         height: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
         border-left: 1px solid #9E9E9E;
+        &:active {
+            background-color: #FAFAFA;
+        }
     }
 }
 
@@ -120,6 +122,9 @@ body {
         &__btn {
             margin-left: .5em;
             cursor: pointer;
+            &:active {
+                background-color: #FAFAFA;
+            }
         }
     }
 }
@@ -132,6 +137,10 @@ body {
         width: 100%;
         height: 30px;
         border: 1px solid #9E9E9E;
+
+        &:active {
+            background-color: #FAFAFA;
+        }
     }
 }
 
